# modorganizer-installer_fomod

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: installer_fomod_en.ts  installerfomod.cpp
